# IconGen

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/icon_gen/: main.py
