[project]
name = "icon-from-file"
version = "0.1.0"
description = "Python script to generate a 128x128 image from the unique hash of a file"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
]

[project.scripts]
icon-gen = "icon_gen.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

